# RP24-DetectionModel

./: CMakeLists.txt  OpenvinoInfer.h  main.cpp
